style.css
html{
    box-sizing: border-box;
    background-color:  #fff;
    scroll-behavior: smooth;
}

body{
    margin: 0;
    min-height: 100vh;
    background-color:  #fff;
}
.top-page{
  display: flex;
  flex-direction: column;
}

   /* nav section */

    nav{
    background-color: transparent;
   }

    
  .container{
   color: #fff;
  }

  #logo{
    width: 15%;
    height: auto;
  }

  #logo:hover{
    cursor:default; 
  }

  
  
  .navbar-light .navbar-brand {
    color: #fff;
    font-size: 25px;
    text-transform: uppercase;
    font-weight: bold;
    letter-spacing: 2px;
  }
  
  .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.active, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .show > .nav-link {
    color: rgba(255, 255, 255, 0.964);
  }

  .nav-link.active,.nav-link:focus{
    color: rgb(255, 255, 255);
  }

  .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
    color: rgb(226, 226, 226);
    text-decoration:underline ;
  } 
  
  .navbar-light .navbar-nav .nav-link {
    color: whitesmoke;
  
    font-size: 1.2rem;
  }
  
  .nav-link {
    padding: .2rem 1rem;
    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); /* Adds shadow */
  }
  
  .navbar-nav {
    text-align: center;
  }


  
  .navbar-toggler {
    width: 20px;
    height: 20px;
    position: relative;
    transition: 0.5s ease-in-out;
  }

  .navbar-toggler,
  .navbar-toggler:focus,
  .navbar-toggler:active,
  .navbar-toggler-icon:focus{
    outline: none;
    box-shadow: none;
    border: 0;
  }

  .navbar-toggler span{
    margin: 0;
    padding: 0;
  }

  .toggler-icon{
    display: block;
    position: absolute;
    height: 3px;
    width: 100%;
    background-color: whitesmoke;
    mix-blend-mode: difference;
    border-radius: 1px;
    opacity: 1;
    left: 0;
    transform: rotate(0deg);
    transition: .25s ease-in-out;
  }


  .middle-bar{
    margin-top: 0px;
  }

  /* when nav toggler is clicked */

  .navbar-toggler .top-bar{
    margin-top: 0px;
    transform: rotate(135deg);
  }

  .navbar-toggler .middle-bar{
    opacity: 0;
    filter: alpha(opacity=0);
  }

  .navbar-toggler .bottom-bar{
    margin-top: 0px;
    transform: rotate(-135deg);
  }

  /* state when navbar is collapsed */
.navbar-toggler.collapsed .top-bar{
  margin-top: -10px;
  transform: rotate(0deg);
}

.navbar-toggler.collapsed .middle-bar{
  opacity: 1;
    filter: alpha(opacity=100);
}

.navbar-toggler.collapsed .bottom-bar{
  margin-top: 10px;
  transform: rotate(0deg);
}

  /* nav section */


/* carousel */

#carouselExampleFade {
  height: 100vh;
  width: calc(100vw - var(--scrollbar-width));  /* Full viewport width minus scrollbar width */
  overflow: hidden; /* Ensures no extra scrollbars appear */
}

.carousel-inner {
  height: 100%; 
}

.carousel-item {
  height: 100%; 
}

.carousel-item img {
  /* Ensure the image covers the entire screen while maintaining aspect ratio */
  object-fit: cover; 
  width: 100%;       
  height: 100%;      
}

/* carousel */

/* why us*/
#why-us {
  padding: 5rem 0rem; /* mobile viewport */
  color: #3b3b3b;
  background-color: rgb(233, 233, 233);
  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
  url(./assets/stencil-logo.jpg);
  background-size: cover; /* Ensures the image covers the entire section */
  background-position: center; /* Centers the image */
  background-repeat: no-repeat; /* Prevents the image from repeating */
}

/* why us */


/* about */
#about{
  padding: 5rem 0rem; /* mobile viewport */
}

.d-grid {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-auto-rows: 100px;
  grid-gap: 7px;
}

.item {
  position: relative;
}

.item:nth-child(1) {
  grid-column: 1 / 2;
  grid-row: 1 / 4;
}

.item:nth-child(2) {
  grid-column: 2;
  grid-row: 0 / 3;
}

.item:nth-child(3) {
  grid-column: 2;
  grid-row: 2 / 3;
}

.item:nth-child(4) {
  grid-column: 2;
  grid-row: 3 / 3;
}

.item a {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  top: 0;
  overflow: hidden;
}

.item img {
  height: 100%;
  width: 100%;
  object-fit: cover;
}
/* about */

/* collections section */
#collections{
  padding: 4rem;
}
/* collections section */
  
  /* footer section */

  #footer{
    background-color: #373d37;
    border-top: 1px solid #fff;
  }

  .foot-links{
    color: #fff;
  }

  .foot-links:hover{
    color: #fff;
  }

  /* footer section */




  /* venetian */

  #why-us-v{
    color: #3b3b3b;
    background-color: rgb(233, 233, 233);
    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
    url(./assets/stencil-logo.jpg);
    background-size: cover; /* Ensures the image covers the entire section */
    background-position: center; /* Centers the image */
    background-repeat: no-repeat; /* Prevents the image from repeating */
  }
 
    /* venetian */

    /* microcememts */

    #why-us-m{
      color: #3b3b3b;
      background-color: rgb(233, 233, 233);
      background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),
      url(./assets/stencil-logo.jpg);
      background-size: cover; /* Ensures the image covers the entire section */
      background-position: center; /* Centers the image */
      background-repeat: no-repeat; /* Prevents the image from repeating */
    }
   
      /* microcememts */

    .subheader{
      display: none;
    }

    @media (max-width: 768px) {
      #logo{
        width: 8rem;
        height: auto;
      }

      #carouselExampleFade .carousel-inner .carousel-item:not(.active) {
        display: none; /* Only show the first image */
        pointer-events: none; /* Optional: disable sliding behavior on mobile */
      }
    }

    @media only screen and (min-width: 1251px) {
      #about{
        padding: 5rem 6rem;
      }

      #why-us {
        padding: 5rem 6rem;
        color: #3b3b3b;
      }
  
      .subheader {
        display: block;
        position: relative;
        margin-left: 60px;
        letter-spacing: 1.5px;
      }
      
      .subheader::before {
        content: "";
        position: absolute;
        left: 0;
        top: 50%; 
        width: 50px; 
        height: 1px; 
        background-color: #c6c6c6; 
        transform: translateY(-50%); 
        transform: translateX(-120%);
      }
    }



   /* ---------- venetian page ---------- */

   .venetian-content-img{
    max-width: 60%;

}

/* ---------- venetian page ---------- */




/* ---------- micro cement page ---------- */

.micro-content-img{
 max-width: 60%;

}




    /* ---------- micro cement page ---------- */
    
   

